Fix corner alert on IE9 and IE10

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -1560,12 +1560,10 @@ img.coin {
   z-index: @zindexPopover;
 
   body[dir="ltr"] & {
-    right: 0;
-    left: auto;  // IE doesn't support "initial"
+    right: 0px;
   }
   body[dir="rtl"] & {
-    left: 0;
-    right: auto; // IE doesn't support "initial"
+    left: 0px;
   }
 }
 
